Refactor : refactoring the fundooNotes
